horgand ChangeLog



== v1.05 (  /01/2004) ==
---------------------------------------------------------------------------------------------
- Improved Menus.
- Fixed Bug in compare and Load functions.
- Fixed Bug in Undo/Redo.
- Fixed Bug in new function.
- Optimized for low graphic resolutions
- Rotary improved.
- Changes programs without stop rhythm.
- Added Change program in main window.
- Small Changes in look.
- Added and Changed Default Sound Bank.
- Fixed Bug in Start/Stop
- Fixed bug in bar led.
- Select Rhythm 1 at start.
- Load Bank 1 at start if ni command line provided.
- Optimized code to fix format strings.
- Drastically reduced the amount of memory needed.
- Main window re-sizable.
- Added memory lock.
- Added FIFO real-time priority.
- Improved Graphic Speed.
 


== v1.04 (20/12/2003) ==
----------------------------------------------------------------------------------------------
- Solved bug in compilation.
- Solved bug in compilation scripts.
- Removed warnings in compilation.
- Solved bug in tempo led
- Load default bank at start.
- Solved bug "flash" in command line.
- Settings changed, Added default bank
- Removed unused variables.
- Debugged memory usage.
- Solved bug in refresh labels adding output value widget replacing labels. 



== v1.03 (11/12/2003) ==
----------------------------------------------------------------------------------------------
- Solved small bugs.
- Solved bug now horgand read the configuration rhythm file from the installed
  directory.
- Re-write GNU-Autotools scripts, now better.
- Re-write alsa detection for compatibility with alsa 1.0 pre1.
- Re-write jack support for compatibility with jack 0.80.



== v1.02 (24/06/2003) ==
----------------------------------------------------------------------------------------------
- Bass file pattern editor.
- Possibility to load-save your rhythm patterns.
- New command line option.
- Added more chords to recognition.
- Bug in +7 chord resolved.



== v1.01 (21/06/2003) ==